--- a/index.html
+++ b/index.html
@@ -19,6 +19,52 @@
 </head>
 
 <body>
+    <!-- navbar -->
+    <section class="nav-section py-3">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg bg-transparent">
+                <div class="container-fluid px-0">
+                    <a class="navbar-brand fw-bold" href="#">It BD Official</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">Deals</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">Success</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-link" href="#">Log In</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="btn btn-outline-primary rounded-1 px-3" href="#">
+                                    Register
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <!-- navbar -->
+
 
 
 
