--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It BD Official</title>
-    <!-- bootstrap -->
+    <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- google fonts -->
+    <!-- google fonts link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- fontawesome -->
+    <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <!-- navbar -->
+    <!-- navbar start -->
     <section class="nav-section py-3">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-transparent">
@@ -63,7 +63,92 @@
             </nav>
         </div>
     </section>
-    <!-- navbar -->
+    <!-- navbar end -->
+
+    <!-- Slider section start -->
+    <section class="hero py-2">
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div
+                            class="card border-0 position-relative overflow-hidden d-flex justify-content-center align-items-center">
+                            <div class="overlay position-absolute top-0 left-0 w-100 h-100 bg-dark opacity-75"></div>
+                            <img src="images/cover/cover-1.png" class="card-img-top img-fluid" alt="">
+                            <div
+                                class="card-body position-absolute left-0 top-0 h-100 w-50 m-auto d-flex justify-content-center align-items-center">
+                                <div class="contents text-center">
+                                    <h2 class="text-white fs-1 fw-semibold">
+                                        Find the Best Courses
+                                    </h2>
+                                    <p class="text-white my-4">
+                                        All the top courses – from our school and the best our teachers.
+                                    </p>
+                                    <a href="" class="btn btn-primary">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div
+                            class="card border-0 position-relative overflow-hidden d-flex justify-content-center align-items-center">
+                            <div class="overlay position-absolute top-0 left-0 w-100 h-100 bg-dark opacity-75"></div>
+                            <img src="images/cover/cover-2.jpg" class="card-img-top img-fluid" alt="">
+                            <div
+                                class="card-body position-absolute left-0 top-0 h-100 w-50 m-auto d-flex justify-content-center align-items-center">
+                                <div class="contents text-center">
+                                    <h2 class="text-white fs-1 fw-semibold">
+                                        A broad selection of courses
+                                    </h2>
+                                    <p class="text-white my-4">
+                                        Choose from 185,000 online video courses with new additions published every
+                                        month
+                                    </p>
+                                    <a href="" class="btn btn-primary">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div
+                            class="card border-0 position-relative overflow-hidden d-flex justify-content-center align-items-center">
+                            <div class="overlay position-absolute top-0 left-0 w-100 h-100 bg-dark opacity-75"></div>
+                            <img src="images/cover/cover-3.jpg" class="card-img-top img-fluid" alt="">
+                            <div
+                                class="card-body position-absolute left-0 top-0 h-100 w-50 m-auto d-flex justify-content-center align-items-center">
+                                <div class="contents text-center">
+                                    <h2 class="text-white fs-1 fw-semibold">
+                                        Learning that gets you
+                                    </h2>
+                                    <p class="text-white my-4">
+                                        Skills for your present (and your future). Get started with us
+                                    </p>
+                                    <a href="" class="btn btn-primary">
+                                        Get Started
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- Slider section end -->
 
 
 
