--- a/index.html
+++ b/index.html
@@ -150,6 +150,150 @@
     </section>
     <!-- Slider section end -->
 
+    <!-- Featured section start -->
+    <section class="courses py-5">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="fs-1 fw-bold">
+                    Discover Our Popular
+                    Courses
+                </h2>
+                <p>
+                    Learn in-demand skills with over 185,000 video courses
+                </p>
+            </div>
+
+            <div class="row mt-4 g-3">
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    The Complete 2022 Web Development Bootcamp
+                                </h5>
+                                <p>
+                                    Become a Full-Stack Web Developer with just ONE course
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $200
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    The Complete JavaScript Course 2022: From Zero to Expert!
+                                </h5>
+                                <p>
+                                    Dive in and learn React.js from scratch! Learn Reactjs
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $500
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    The Complete Python Pro Bootcamp for 2022
+                                </h5>
+                                <p>
+                                    Master Python by building 100 projects in 100 days
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $50
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    The Complete Guide (incl Hooks, React Router, Redux)
+                                </h5>
+                                <p>
+                                    Build powerful, fast, user-friendly and reactive web apps
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $300
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    Learn Python: Python for Beginners
+                                </h5>
+                                <p>
+                                    Python introduction for beginners. Learn complete Python from scratch!
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $200
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="img-fluid w-100" alt="">
+                            </div>
+                            <div class="col-md-8 m-auto">
+                                <h5>
+                                    Automate the Boring Stuff with Python Programming
+                                </h5>
+                                <p>
+                                    Get a kick start on your career and ace your coding interviews!
+                                </p>
+                                <a href="" class="text-primary text-decoration-none">
+                                    Price: $250
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="text-center mt-5">
+                <a href="" class="btn btn-primary">
+                    View All Courses
+                </a>
+            </div>
+    </section>
+    <!-- Featured section end -->
+
 
 
 
