--- a/index.html
+++ b/index.html
@@ -294,6 +294,51 @@
     </section>
     <!-- Featured section end -->
 
+    <!-- Explore section start -->
+    <section class="explore py-5">
+        <div class="container">
+            <div class="row g-0">
+                <div class="col-md-5">
+                    <img src="images/working.png" class="img-fluid w-100" alt="">
+                </div>
+                <div class="col-md-7 bg-light d-flex flex-column justify-content-center p-4">
+                    <h2 class="mb-3 fs-1 fw-bold">Expand Your Career Opportunities with Python</h2>
+                    <p>
+                        Take one of Udemy’s range of Python courses and learn how to code using this incredibly useful
+                        language. Its simple syntax and readability makes Python perfect for Flask, Django, data
+                        science, and machine learning. You’ll learn how to build everything from games to sites to apps.
+                        Choose from a range of courses that will appeal to both beginners and advanced developers alike.
+                    </p>
+                    <p>
+                        Python is a general-purpose, object-oriented, high-level programming language. Whether you work
+                        in artificial intelligence or finance or are pursuing a career in web development or data
+                        science
+                    </p>
+                    <div class="row my-4">
+                        <div class="col-lg-4 col-6">
+                            <h2 class="fw-semibold">3.2K+</h2>
+                            <p>Active Course</p>
+                        </div>
+                        <div class="col-lg-4 col-6">
+                            <h2 class="fw-semibold">600+</h2>
+                            <p>Instructos</p>
+                        </div>
+                        <div class="col-lg-4 col-6">
+                            <h2 class="fw-semibold">100K+</h2>
+                            <p>Students</p>
+                        </div>
+                    </div>
+
+                    <a href="" class="btn btn-primary w-25">
+                        Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Explore section end -->
+
+
 
 
 
