Modal Section Added

--- a/index.html
+++ b/index.html
@@ -338,6 +338,64 @@
     </section>
     <!-- Explore section end -->
 
+    <!-- ready to join -->
+    <section class="ready-to-join py-5">
+        <div class="container">
+            <div class="card border-0 bg-primary">
+                <div class="card-body p-5">
+                    <div class="row g-3">
+                        <div class="col-lg-6">
+                            <h2 class="text-white fw-semibold mb-4">Ready to join?</h2>
+                            <p class="text-white">
+                                You are now one step away from the awesome world of Programming.
+                            </p>
+                        </div>
+                        <div class="col-lg-6 text-end m-auto">
+                            <button class="btn btn-light text-primary fw-semibold py-3 px-5" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">Register Now </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ready to join -->
+
+    <!-- Modal Section Start -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" id="floatingInput1" placeholder="name@example.com">
+                            <label for="floatingInput1">Your Name</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput2" placeholder="name@example.com">
+                            <label for="floatingInput2">Your Email address</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" id="floatingInput3"
+                                placeholder="name@example.com">
+                            <label for="floatingInput3">Create Password</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Register Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Section End -->
+
+
 
 
 
